[package]
name                 = "xiaoyong-value"
description          = "Collection of sharing state primitives for async contexts (both Sync and !Sync)"
version              = "2.1.0"
publish.workspace    = true
authors.workspace    = true
repository.workspace = true
edition.workspace    = true
license.workspace    = true
categories           = [ "asynchronous", "data-structures", "rust-patterns" ]

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true

[dependencies]
smallvec.workspace        = true
triomphe.workspace        = true
crossbeam-utils.workspace = true
